Añade dependencias faltantes (multer, cloudinary)

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
 </head>
 <body>
     <div class="container">
+        <a href="/admin.html" class="admin-link">Panel de Migración</a>
         <h1>Registro de Usuario</h1>
         <form id="registroForm">
             <label for="nombre">Nombre:</label>
