--- a/public/user.html
+++ b/public/user.html
@@ -9,16 +9,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
     
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+    
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <h1>Información de la Persona Registrada</h1>
-        <div id="userInfo">
+    <div class="profile-card">
+        <div id="profile-content">
             <p>Cargando datos...</p>
         </div>
     </div>
-
     <script src="user.js"></script>
 </body>
 </html>
