Añade dependencias faltantes (multer, cloudinary)

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registro Migratorio</title>
+    <title>Registro de Extranjero</title>
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,9 +13,12 @@
 </head>
 <body>
     <div class="container">
-        <a href="/admin.html" class="admin-link">Panel de Migración</a>
-        <h1>Registro de Usuario</h1>
-        <form id="registroForm">
+        <div class="header-controls">
+            <img src="https://i.imgur.com/dohb5sT.png" alt="Logo de Migración" class="form-logo">
+            <a href="/admin.html" class="admin-link">Panel de Migración</a>
+        </div>
+
+        <h1>Registro de Extranjero</h1> <form id="registroForm">
             <label for="nombre">Nombre:</label>
             <input type="text" id="nombre" placeholder="Escribe el nombre" required>
             
