--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container">
         <div class="header-controls">
-            <img src="https://i.imgur.com/dohb5sT.png" alt="Logo de Migración" class="form-logo">
+            <img src="/images/logo-migracion.png" alt="Logo de Migración" class="form-logo">
             <a href="/admin.html" class="admin-link">Panel de Migración</a>
         </div>
 
