--- a/public/admin.html
+++ b/public/admin.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Panel de Administración - DGM</title>
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
@@ -17,8 +18,16 @@
                 <img src="/images/logo-migracion.png" alt="Logo Migración" class="header-logo">
                 <h1>Panel de Migración</h1>
             </div>
-            <a href="/" class="back-link"><i class="fas fa-home"></i> Volver al Inicio</a>
-        </header>
+
+            <div class="header-actions">
+                <a href="/index.html" class="action-btn">
+                    <i class="fas fa-user-plus"></i> Registrar Extranjero
+                </a>
+                <a href="/api/logout" class="back-link">
+                    <i class="fas fa-sign-out-alt"></i> Cerrar Sesión
+                </a>
+            </div>
+            </header>
         
         <div class="table-wrapper">
             <table>
@@ -37,6 +46,7 @@
         </div>
         <p id="loading-message">Cargando usuarios...</p>
     </div>
+
     <script src="admin.js"></script>
 </body>
 </html>
