Añade los archivos de login que faltaban al proyecto

--- a/public/index.html
+++ b/public/index.html
@@ -13,14 +13,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <a href="/admin.html" class="page-corner-link" title="Panel de Administración">
-        <i class="fas fa-cog"></i> Panel de Administración
+    <a href="/login.html" class="page-corner-link" title="Panel de Administración">
+        <i class="fas fa-cog"></i> Panel
     </a>
 
-    <div class="main-content-wrapper">
-        <div class="form-card">
-            <img src="/images/logo-migracion.png" alt="Logo Dirección General de Migración" class="form-logo">
-            <h1>Registro de Extranjero</h1>
+    <div class="content-wrapper">
+        <div class="content-card">
+            <img src="/images/logo-migracion.png" alt="Logo Dirección General de Migración" class="card-logo">
+            <h1 class="card-title">Registro de Extranjero</h1>
             
             <form id="registroForm">
                 <div class="form-row">
