--- a/public/index.html
+++ b/public/index.html
@@ -11,41 +11,20 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <a href="/login.html" class="page-corner-link" title="Panel de Administración">
-        <i class="fas fa-cog"></i> Panel
-    </a>
-
     <div class="content-wrapper">
-        <div class="content-card">
-            <img src="/images/logo-migracion.png" alt="Logo Dirección General de Migración" class="card-logo">
+        <div class="card form-card">
+            <img src="/images/logo-migracion.png" alt="Logo" class="card-logo">
             <h1 class="card-title">Registro de Extranjero</h1>
-            
             <form id="registroForm">
                 <div class="form-row">
-                    <div class="form-group">
-                        <label for="nombre">Nombre(s)</label>
-                        <input type="text" id="nombre" placeholder="Escriba su nombre" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="apellido">Apellido(s)</label>
-                        <input type="text" id="apellido" placeholder="Escriba su apellido" required>
-                    </div>
+                    <div class="form-group"><label for="nombre">Nombre(s)</label><input type="text" id="nombre" required></div>
+                    <div class="form-group"><label for="apellido">Apellido(s)</label><input type="text" id="apellido" required></div>
                 </div>
-                <div class="form-group">
-                    <label for="pasaporte">Número de Pasaporte</label>
-                    <input type="text" id="pasaporte" placeholder="Escriba el número de pasaporte" required>
-                </div>
-                <div class="form-group">
-                    <label for="fecha_nacimiento">Fecha de Nacimiento</label>
-                    <input type="date" id="fecha_nacimiento" required>
-                </div>
-                <div class="form-group">
-                    <label for="foto">Foto de Perfil (Opcional)</label>
-                    <input type="file" id="foto" name="foto" accept="image/png, image/jpeg">
-                </div>
+                <div class="form-group"><label for="pasaporte">Número de Pasaporte</label><input type="text" id="pasaporte" required></div>
+                <div class="form-group"><label for="fecha_nacimiento">Fecha de Nacimiento</label><input type="date" id="fecha_nacimiento" required></div>
+                <div class="form-group"><label for="foto">Foto de Perfil (Opcional)</label><input type="file" id="foto" name="foto" accept="image/png, image/jpeg"></div>
                 <button type="submit" id="submitBtn">Registrar y Generar QR</button>
             </form>
-            
             <div class="loader" id="loader" style="display: none;"></div>
             <div id="qrContainer"></div>
         </div>
